--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,6 +72,49 @@ body {
 	}
 }
 
+.nav {
+	position: fixed;
+	// top: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	background-image: $blue-gradient-solid;
+	z-index: 50;
+	
+	// &__items {
+	// 	height: 100%;
+	// 	flex-direction: column;
+	// }
+
+	&__item {
+		position: relative;
+		display: block;
+		margin: 0.5em 0;
+		padding: 0.5em 2em;
+		font-size: 2.8rem;
+		text-decoration: none;
+		color: $pure-white;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 3px;
+			height: 100%;
+			background-color: $pure-white;
+			transform: scaleY(0);
+			transition: transform 0.3s;
+		}
+
+		&:hover::before {
+			transform: scaleY(1);
+		}
+	}
+}
+
 // HEADER
 .header {
 	position: relative;
