--- a/sass/main.scss
+++ b/sass/main.scss
@@ -80,9 +80,15 @@ body {
 	align-items: center;
 	height: 100vh;
 	width: 100%;
+	transform: translateX(100%);
 	background-image: $blue-gradient-solid;
+	transition: transform 0.5s cubic-bezier(0.65, 0.05, 0.36, 1);
 	z-index: 50;
-	
+
+	&--active {
+		transform: translateX(0);
+	}
+
 	// &__items {
 	// 	height: 100%;
 	// 	flex-direction: column;
@@ -113,6 +119,20 @@ body {
 			transform: scaleY(1);
 		}
 	}
+}
+
+@keyframes navItemsAnimation {
+	from {
+		transform: translateX(200%);
+	}
+
+	to {
+		transform: translateX(0);
+	}
+}
+
+.nav-item-animation {
+	animation: navItemsAnimation 1s both;
 }
 
 // HEADER
