--- a/css/main.css
+++ b/css/main.css
@@ -379,11 +379,36 @@ body {
     top: 50px;
     right: 50px;
   }
+  .nav__item {
+    font-size: 4.8rem;
+  }
   .header {
     background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/header_1920.jpg");
   }
   .header__heading {
     font-size: 10rem;
+  }
+  .dreams__box {
+    margin: 5em 0;
+  }
+  .dreams__box-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    margin-bottom: 2.5em;
+  }
+  .dreams__title {
+    font-size: 3.6rem;
+  }
+  .dreams__text {
+    font-size: 2.2rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
