--- a/sass/main.scss
+++ b/sass/main.scss
@@ -203,33 +203,33 @@ body {
 // ===========================
 
 @media (min-width: 576px) {
-.dreams {
-	&__box {
-		flex-direction: row;
-		justify-content: space-between;
+	.dreams {
+		&__box {
+			flex-direction: row;
+			justify-content: space-between;
 
-		&-text {
-			width: 55%;
+			&-text {
+				width: 55%;
 
-			&--right {
-				text-align: right;
+				&--right {
+					text-align: right;
+				}
+			}
+
+			&-img {
+				width: 40%;
+
+				&--right {
+					order: 1;
+				}
 			}
 		}
 
-		&-img {
-			width: 40%;
-
-			&--right {
-				order: 1;
-			}
+		&__img {
+			margin-bottom: 0;
+			max-height: 300px;
 		}
 	}
-
-	&__img {
-		margin-bottom: 0;
-		max-height: 300px;
-	}
-}
 }
 
 @media (min-width: 768px) {
@@ -265,11 +265,38 @@ body {
 		right: 50px;
 	}
 
+	.nav {
+		&__item {
+			font-size: 4.8rem;
+		}
+	}
+
 	.header {
 		background-image: $blue-gradient, url('../img/header_1920.jpg');
 
 		&__heading {
 			font-size: 10rem;
+		}
+	}
+
+	.dreams {
+		&__box {
+			margin: 5em 0;
+
+			&-text {
+				display: flex;
+				flex-direction: column;
+				justify-content: flex-end;
+				margin-bottom: 2.5em;
+			}
+		}
+
+		&__title {
+			font-size: 3.6rem;
+		}
+
+		&__text {
+			font-size: 2.2rem;
 		}
 	}
 }
