--- a/sass/main.scss
+++ b/sass/main.scss
@@ -198,6 +198,26 @@ body {
 	}
 }
 
+// HERO IMG
+.hero-img {
+	position: relative;
+	padding: 10em 2em;
+	@include heroImages('../img/polynesia_640.jpg');
+	text-align: center;
+	color: $pure-white;
+	overflow: hidden;
+
+	&__title {
+		font-family: 'Dancing Script', cursive;
+		margin-bottom: 0.5em;
+		font-size: 4.8rem;
+	}
+
+	&__text {
+		padding: 1em 0;
+	}
+}
+
 // ===========================
 // MEDIA
 // ===========================
