MAIN: added media for HERO-IMG section

--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,16 @@ body {
   .dreams__text {
     font-size: 1.8rem;
   }
+  .hero-img {
+    padding: 30rem 2em;
+  }
+  .hero-img hr {
+    width: 70%;
+    margin: 0 auto;
+  }
+  .hero-img__text {
+    font-size: 2.2rem;
+  }
 }
 
 @media (min-width: 992px) {
@@ -431,6 +441,13 @@ body {
   }
   .dreams__text {
     font-size: 2.2rem;
+  }
+  .hero-img {
+    padding: 40rem 2em;
+    background-image: linear-gradient(45deg, rgba(20, 105, 241, 0.75), rgba(42, 10, 184, 0.75)), url("../img/polynesia_1920.jpg");
+  }
+  .hero-img__title {
+    font-size: 7.2rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
