--- a/sass/main.scss
+++ b/sass/main.scss
@@ -277,6 +277,19 @@ body {
 			font-size: 1.8rem;
 		}
 	}
+
+	.hero-img {
+		padding: 30rem 2em;
+
+		hr {
+			width: 70%;
+			margin: 0 auto;
+		}
+
+		&__text {
+			font-size: 2.2rem;
+		}
+	}
 }
 
 @media (min-width: 992px) {
@@ -317,6 +330,15 @@ body {
 
 		&__text {
 			font-size: 2.2rem;
+		}
+	}
+
+	.hero-img {
+		padding: 40rem 2em;
+		background-image: $blue-gradient, url('../img/polynesia_1920.jpg');
+
+		&__title {
+			font-size: 7.2rem;
 		}
 	}
 }
