--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -35,17 +35,17 @@
 	height: 40px;
 	width: 60%;
 	background-color: $pure-white;
+	transform: skew(45deg);
 
 	&-left {
 		bottom: 0;
 		left: -50px;
-		transform: skew(45deg);
 	}
 
 	&-right {
 		top: 0;
 		right: -50px;
-		transform: skew(45deg);
+		// transform: skew(45deg);
 	}
 }
 
