--- a/sass/main.scss
+++ b/sass/main.scss
@@ -202,7 +202,7 @@ body {
 .hero-img {
 	position: relative;
 	padding: 10em 2em;
-	@include heroImages('../img/polynesia_640.jpg');
+	@include heroImages('../img/hero-img_640.jpg');
 	text-align: center;
 	color: $pure-white;
 	overflow: hidden;
@@ -215,6 +215,37 @@ body {
 
 	&__text {
 		padding: 1em 0;
+	}
+}
+
+// ISLANDS
+.islands {
+	&__card {
+		position: relative;
+		margin: 1em 0;
+		height: 450px;
+		text-align: center;
+		color: $pure-white;
+		perspective: 1000px;
+
+		&-img {
+			padding: 2em;
+			height: 100%;
+			background-size: cover;
+			border-radius: 8px;
+
+			&--first {
+				background-image: $light-blue-gradient, url('../img/island1_640.jpg');
+			}
+
+			&--second {
+				background-image: $blue-gradient, url('../img/island2_640.jpg');
+			}
+
+			&--third {
+				background-image: $purple-gradient, url('../img/island3_640.jpg');
+			}
+		}
 	}
 }
 
@@ -335,7 +366,7 @@ body {
 
 	.hero-img {
 		padding: 40rem 2em;
-		background-image: $blue-gradient, url('../img/polynesia_1920.jpg');
+		background-image: $blue-gradient, url('../img/hero-img_1920.jpg');
 
 		&__title {
 			font-size: 7.2rem;
