--- a/sass/main.scss
+++ b/sass/main.scss
@@ -228,11 +228,24 @@ body {
 		color: $pure-white;
 		perspective: 1000px;
 
+		&:hover {
+			.islands__card-img {
+				transform: rotateY(-180deg);
+				opacity: 0;
+			}
+
+			.islands__card-info {
+				transform: rotateY(0);
+				opacity: 1;
+			}
+		}
+
 		&-img {
 			padding: 2em;
 			height: 100%;
 			background-size: cover;
 			border-radius: 8px;
+			transition: transform 1s, opacity 1s;
 
 			&--first {
 				background-image: $light-blue-gradient, url('../img/island1_640.jpg');
@@ -244,6 +257,79 @@ body {
 
 			&--third {
 				background-image: $purple-gradient, url('../img/island3_640.jpg');
+			}
+
+			&-title {
+				font-family: 'Dancing Script', cursive;
+				font-size: 2.8rem;
+			}
+
+			&-info {
+				position: absolute;
+				bottom: 30px;
+				right: 30px;
+				font-size: 1.8rem;
+
+				i {
+					margin-right: 0.3em;
+				}
+			}
+		}
+
+		&-info {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			// height: 100%;
+			// width: 100%;
+			// padding: 2em;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			background-image: $light-blue-gradient-solid;
+			border-radius: 8px;
+			transform: rotateY(180deg);
+			opacity: 0;
+			transition: transform 1s, opacity 1s;
+
+			&-title {
+				@include islandsCardStyles;
+				top: 1.2em;
+				font-family: 'Dancing Script', cursive;
+				font-size: 2.8rem;
+			}
+
+			&-list {
+				margin: 0 auto;
+				width: 70%;
+				list-style: none;
+
+				&-item {
+					padding: 1em;
+					font-size: 1.4rem;
+					border-bottom: 1px solid $light-white;
+
+					&:last-child {
+						border-bottom: none;
+					}
+				}
+			}
+
+			&-btn {
+				@include islandsCardStyles;
+				bottom: 2em;
+				padding: 1em;
+				border-radius: 8px;
+				border: none;
+				width: 80%;
+				cursor: pointer;
+				background-color: $green-color;
+
+				&::before {
+					background-color: $green-color-hover;
+				}
 			}
 		}
 	}
