--- a/sass/main.scss
+++ b/sass/main.scss
@@ -407,6 +407,19 @@ body {
 			font-size: 2.2rem;
 		}
 	}
+
+	.islands {
+		&__cards {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+		}
+
+		&__card {
+			margin: 1em;
+			width: 45%;
+		}
+	}
 }
 
 @media (min-width: 992px) {
@@ -456,6 +469,14 @@ body {
 
 		&__title {
 			font-size: 7.2rem;
+		}
+	}
+}
+
+@media (min-width: 1100px) {
+	.islands {
+		&__card {
+			width: 30%;
 		}
 	}
 }
