--- a/sass/main.scss
+++ b/sass/main.scss
@@ -350,10 +350,10 @@ body {
 		box-shadow: 5px 5px 10px rgba(46, 46, 46, 0.18);
 		background-color: $pure-white;
 		overflow: hidden;
-		
+
 		&-img {
 			width: 100%;
-			transition: transform .3s;
+			transition: transform 0.3s;
 
 			&:hover {
 				transform: scale(1.1);
@@ -362,6 +362,8 @@ body {
 
 		&-info {
 			padding: 2em;
+			background-color: $pure-white;
+			z-index: 10;
 		}
 
 		&-heading {
@@ -393,7 +395,6 @@ body {
 	}
 }
 
-
 // ===========================
 // MEDIA
 // ===========================
@@ -424,6 +425,37 @@ body {
 		&__img {
 			margin-bottom: 0;
 			max-height: 300px;
+		}
+	}
+
+	.offers {
+		&__option {
+			display: flex;
+			margin: 2em 0;
+			width: 100%;
+
+			&-img {
+				width: 50%;
+				height: auto;
+
+				&--right {
+					order: 1;
+				}
+			}
+
+			&-info {
+				display: flex;
+				flex-direction: column;
+				justify-content: space-between;
+			}
+
+			&-heading {
+				font-size: 3.6rem;
+			}
+
+			&-btn {
+				padding: 1em;
+			}
 		}
 	}
 }
@@ -528,6 +560,21 @@ body {
 
 		&__title {
 			font-size: 7.2rem;
+		}
+	}
+
+	.offers {
+		background-image: $blue-gradient, url('../img/offer_1920.jpg');
+
+		&__option {
+			&-img {
+				object-fit: cover;
+				// height: 300px;
+			}
+
+			&-text {
+				font-size: 1.5rem;
+			}
 		}
 	}
 }
