--- a/css/main.css
+++ b/css/main.css
@@ -248,6 +248,12 @@ body {
           animation: navItemsAnimation 1s both;
 }
 
+.burger-btn-black-bars,
+.burger-btn-black-bars::before,
+.burger-btn-black-bars::after {
+  background-color: #2e2e2e;
+}
+
 .header {
   position: relative;
   display: -webkit-box;
